[package]
name = "topazdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
bytes = "*"
crossbeam-skiplist = "*"
crossbeam-channel = "*"
parking_lot = "*"
ouroboros = "*"
moka = "*"
log = "*"
snap = "*"
lz4 = "*"
libc = "*"
# rayon thread pool doesn't support shutting down
# rayon = "*"
yatp = {git = "https://github.com/tikv/yatp"}
crc32fast = "*"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

[dev-dependencies]
tempfile = "*"
criterion = "*"

[[bench]]
name = "sstable_read"
harness = false

[profile.bench]
debug = true